--- a/JenkinsFile
+++ b/JenkinsFile
@@ -5,7 +5,7 @@ pipeline {
         stage('Checkout') {
             steps {
                 // Checkout the repository from GitHub
-                git credentialsId: 'your-github-credentials-id', url: 'https://github.com/esraakhalifa/List-Files-Bash-Script.git'
+                git credentialsId: '1', url: 'https://github.com/esraakhalifa/List-Files-Bash-Script'
             }
         }
 
